--- a/notebooks/01-sample-pi.ipynb
+++ b/notebooks/01-sample-pi.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# CompSci software project WS17/18 - session 1"
+    "# CompSci software project WS17/18 - 24.10.2017"
    ]
   },
   {
@@ -22,14 +22,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Task\n",
     "\n",
-    "Write a function ``estimate_pi(n_sample)`` to compute an estimate for $\\pi$ using $n_{\\text{sample}}$ Monte Carlo (MC) throws:\n",
+    "Write a function ``approximate_pi(n_sample)`` to compute an estimate for $\\pi$ using $n_{\\text{sample}}$ Monte Carlo (MC) throws:\n",
     "\n",
-    "$$\\pi_{\\text{estimate}} = \\frac{1}{n_{\\text{sample}}} \\sum\\limits_{n=0}^{n_{\\text{sample}}-1} \\chi(x_n, y_n)$$\n",
+    "$$\\pi_{\\text{approx}} = \\frac{1}{n_{\\text{sample}}} \\sum\\limits_{n=0}^{n_{\\text{sample}}-1} \\chi(x_n, y_n)$$\n",
     "\n",
     "with\n",
     "\n",
