--- a/notebooks/01-sample-pi.ipynb
+++ b/notebooks/01-sample-pi.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -51,14 +51,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.140232\n",
+      "3.6900012493133545\n"
+     ]
+    }
+   ],
+   "source": [
+    "def approximate_pi_naive(n_sample):\n",
+    "    summation = 0\n",
+    "    for i in range(n_sample):\n",
+    "        x, y = np.random.rand(2)\n",
+    "        if x*x + y*y <= 1.0:\n",
+    "            summation +=1\n",
+    "    return 4.0 * summation / float(n_sample)\n",
+    "\n",
+    "start = time()\n",
+    "print(approximate_pi_naive(1000000))\n",
+    "print(time()-start)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.140848\n",
+      "0.13173198699951172\n"
+     ]
+    }
+   ],
+   "source": [
+    "def approximate_pi_vectorized(n_sample):\n",
+    "    xy = np.random.rand(n_sample,2)\n",
+    "    rr = np.sum(xy**2, axis=1)\n",
+    "    idx = np.where(rr <=1.0)[0]\n",
+    "    return 4.0 * len(idx) / float(n_sample)\n",
+    "    \n",
+    "start = time()\n",
+    "print(approximate_pi_vectorized(1000000))\n",
+    "print(time()-start)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": [
-    "def approximate_pi_naive(n_sample):\n",
-    "    pass"
+    "Metropolis MCMC version:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.2857142857142857\n",
+      "7.452849864959717\n"
+     ]
+    }
+   ],
+   "source": [
+    "def approximate_pi_MetMCMC(n_sample):\n",
+    "    summation = 0\n",
+    "    withinsquare = 0\n",
+    "    x, y = 0.0, 0.0\n",
+    "    for i in range(n_sample):\n",
+    "        x_new, y_new = x + 0.5*np.random.rand(1), y + 0.5*np.random.rand(1)\n",
+    "        if x_new*x_new <= 1.0 and y_new*y_new <= 1.0:\n",
+    "            withinsquare += 1\n",
+    "            x, y = x_new, y_new\n",
+    "            if x*x + y*y <= 1.0: \n",
+    "                summation +=1\n",
+    "    return summation / float(withinsquare)\n",
+    "\n",
+    "start = time()\n",
+    "print(approximate_pi_MetMCMC(1000000))\n",
+    "print(time()-start)"
    ]
   },
   {
@@ -68,10 +152,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "def approximate_pi_vectorized(n_sample):\n",
-    "    pass"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -99,7 +180,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
